<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/textView3String"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="326dp"
        android:layout_height="37dp"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="475dp"
        android:max="5"
        android:progress="1"
        android:foregroundGravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="450dp"
        android:text="@string/textView4String"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginBottom="380dp"
        android:text="@string/textView5String"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/button1String"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/button2String"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="54dp"
        android:text="@string/button3String"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/submitButtonString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/nextButtonString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/option1String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/option2String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="54dp"
        android:text="@string/option3String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton1"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/nextButton1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/choice2String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="54dp"
        android:text="@string/choice3String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/choice1String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton2"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/nextButton2String"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/row1String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/row2String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="54dp"
        android:text="@string/row3String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton3"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/nextButton3String"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/col1String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="25dp"
        android:text="@string/col2String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="54dp"
        android:text="@string/col3String"
        android:visibility="invisible"
        android:enabled="false"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/nextButton4"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:visibility="invisible"
        android:enabled="false"
        android:text="@string/nextButton4String"
        android:onClick="NextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>